@@ -69,6 +69,9 @@ div#navigation table {
 <div class="ulist">
 <ul>
 <li>
+<p>Added all RTT output mode to bench. #326</p>
+</li>
+<li>
 <p>Fixed private constructor chosen problem on publish packet. #325</p>
 </li>
 <li>
