@@ -121,6 +121,30 @@ pub_after_idle_delay_ms=1000
 # true or false. if true, individual connections max mid avg min are reported
 detail_report=false
 
+# a file name to store RTT(Round Trip Time) in micro seconds.
+#
+# File format:
+#   1st RTT in us by the 1st client
+#   2nd RTT in us by the 1st client
+#   3rd RTT in us by the 1st client
+#   (a line break)
+#   1st RTT in us by the 2nd client
+#   2nd RTT in us by the 2nd client
+#   3rd RTT in us by the 2nd client
+#   (a line break)
+#   ...
+#
+# Example:
+#   2143
+#   13331
+#   12443
+#
+#   12459
+#   146851
+#   33657
+#
+# all_rtt_store_file=rtt.log
+
 # Each progress_timer_sec progress is reported, if set 0 then no progress report
 progress_timer_sec=0
 
